Fix the hosting card overlap issues

--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-card/style.scss
@@ -12,6 +12,7 @@
 
 		.button {
 			width: 100%;
+			text-wrap: balance;
 		}
 
 		.woo-logo {
